--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>John Doe - UX Designer & Front End Developer</title>
+<title>Chagatay Uslu - Database Specialist </title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -41,8 +41,8 @@
     <div class="container">
       <div class="row">
         <div class="intro-text">
-          <h1>Hello, I'm <span class="name">John Doe</span></h1>
-          <p>UX Designer & Front End Developer</p>
+          <h1>Hello, I'm <span class="name">Chagatay</span></h1>
+          <p>ICT Specialist & Data System Engineer </p>
           <a href="#about" class="btn btn-default btn-lg page-scroll">Learn More</a> </div>
       </div>
     </div>
