--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Chagatay Uslu - Database Specialist </title>
+<title>Cagatay Uslu - Database Specialist </title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="row">
         <div class="intro-text">
-          <h1>Hello, I'm <span class="name">Chagatay</span></h1>
+          <h1>Hello, I'm <span class="name">Cagatay (Chatai)</span></h1>
           <p>ICT Specialist & Data System Engineer </p>
           <a href="#about" class="btn btn-default btn-lg page-scroll">Learn More</a> </div>
       </div>
@@ -54,7 +54,7 @@
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"> <i class="fa fa-bars"></i> </button>
-        <a class="navbar-brand page-scroll" href="#page-top">John Doe</a> </div>
+        <a class="navbar-brand page-scroll" href="#page-top">Cagatay Uslu</a> </div>
       
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
